add header styles

--- a/index.html
+++ b/index.html
@@ -20,6 +20,68 @@
     <link rel="stylesheet" href="./src/sass/main.scss" />
   </head>
   <body>
+    <header class="header" id="header">
+      <div class="container">
+        <div class="header__pages">
+          <button type="button" class="header-btn" id="openMenu">
+            <svg class="header-btn__icon">
+              <use
+                href="./src/images/icons/symbol-defs.svg#icon-hamb_menu"
+              ></use>
+            </svg>
+          </button>
+          <nav class="navigation">
+            <ul class="nav-list">
+              <li class="nav-list__item">
+                <a href="#" class="nav-list__link">editions</a>
+              </li>
+              <li class="nav-list__item">
+                <a href="#" class="nav-list__link">controller</a>
+              </li>
+              <li class="nav-list__item">
+                <a href="#" class="nav-list__link">about game</a>
+              </li>
+              <li class="nav-list__item">
+                <a href="#" class="nav-list__link">explore</a>
+              </li>
+              <li class="nav-list__item">
+                <a href="#" class="nav-list__link">news</a>
+              </li>
+              <li class="nav-list__item">
+                <a href="#" class="nav-list__link">FAQ</a>
+              </li>
+              <li class="nav-list__item">
+                <a href="#" class="nav-list__link">english </a>
+                <button type="button" class="nav-list__btn">
+                  <svg class="nav-list__icon">
+                    <use
+                      href="./src/images/icons/symbol-defs.svg#icon-hamb_menu"
+                    ></use>
+                  </svg>
+                </button>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="header-time">
+          <h3 class="header-time__title">Realease:</h3>
+          <ul class="header-time-list">
+            <li class="header-time-list__item">
+              <p class="header-time-list__number">0</p>
+              <p class="header-time-list__letter">D</p>
+            </li>
+            <li class="header-time-list__item">
+              <p class="header-time-list__number">0</p>
+              <p class="header-time-list__letter">H</p>
+            </li>
+            <li class="header-time-list__item">
+              <p class="header-time-list__number">0</p>
+              <p class="header-time-list__letter">M</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </header>
     <script src="./src/js/index.js"></script>
   </body>
 </html>
