add trailer html
 change name img

--- a/index.html
+++ b/index.html
@@ -82,6 +82,22 @@
         </div>
       </div>
     </header>
+
+<main>
+<section class="trailer">
+  <div class="container">
+
+  <h2 class="trailer__title">About Game </h2>
+<div class="trailer__video">
+  <video src="///" controls src="" class="trailer__video-elem"></video>
+</div>
+<div class="trailer__video-info">
+  <h2 class="trailer__video-info-title">Watch the Trailer</h2>
+  <button type="button" class="trailer__video-info-btn"> PLAY</button>
+</div>
+  </div>
+</section>
+</main>
     <script src="./src/js/index.js"></script>
   </body>
 </html>
